# module37

Task1/: CMakeLists.txt  calculator.ui  calculatormainwindow.h  main.cpp
Task2/: CMakeLists.txt  main.qml
Task3/: CMakeLists.txt  main.cpp  remote.ui  remotemainwindow.h
